--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.2.0'
     def work_version = "2.7.1"
     implementation "androidx.work:work-runtime:$work_version"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
