--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
     def work_version = "2.7.1"
     implementation "androidx.work:work-runtime:$work_version"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
